Adjusted build.xml to delete output directory before rebuild

--- a/build.xml
+++ b/build.xml
@@ -11,7 +11,7 @@
 		<delete dir="output" />
 	</target>
 
-	<target name="compile">
+	<target name="compile" depends="clean">
 		<mkdir dir="dist/classes" />
 		<javac includeantruntime="false" srcdir="src" destdir="dist/classes">
 			<classpath refid="my-classpath" />
