--- a/.classpath
+++ b/.classpath
@@ -3,24 +3,8 @@
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="lib" path="lib/ant-1.9.3.jar"/>
-	<classpathentry kind="lib" path="lib/antlr-2.7.7.jar"/>
-	<classpathentry kind="lib" path="lib/antlr-runtime-3.4.jar"/>
 	<classpathentry kind="lib" path="lib/asciidoctor-java-integration-0.1.4.jar"/>
-	<classpathentry kind="lib" path="lib/commons-lang3-3.1.jar"/>
-	<classpathentry kind="lib" path="lib/ecj-3.7.2.jar"/>
-	<classpathentry kind="lib" path="lib/fastjson-1.1.27.jar"/>
-	<classpathentry kind="lib" path="lib/fel-0.8.jar"/>
-	<classpathentry kind="lib" path="lib/guava-14.0.1.jar"/>
-	<classpathentry kind="lib" path="lib/hamcrest-library-1.3.jar"/>
-	<classpathentry kind="lib" path="lib/jcommander-1.30.jar"/>
 	<classpathentry kind="lib" path="lib/jruby-complete-1.7.4.jar"/>
-	<classpathentry kind="lib" path="lib/jsoup-1.7.2.jar"/>
-	<classpathentry kind="lib" path="lib/mvel2-2.1.5.Final.jar"/>
-	<classpathentry kind="lib" path="lib/pat-1.5.3.jar"/>
-	<classpathentry kind="lib" path="lib/rythm-engine-1.0-b10-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="lib/stringtemplate-3.2.1.jar"/>
-	<classpathentry kind="lib" path="lib/xml-matchers-1.0-RC1.jar"/>
-	<classpathentry kind="lib" path="lib/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="lib/ST-4.0.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
