Add net.enilink.docs as submodule.
Change-Id: Id15502d52efa4b45c081f249e5fd00df3c2acb8f

--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="komma-docs" default="run" basedir=".">
-	<include file="../net.enilink.docs/base.xml" />
+	<include file="net.enilink.docs/base.xml" />
 
 	<target name="run">
 		<antcall target="net.enilink.docs.generate">
