--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,8 +33,6 @@ jobs:
       - name: Build with Maven
         run: mvn -B package
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      # Upload to gh-pages
+      - name: Deploy to gh-pages branch
+        run: ./deploy.sh
